--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "framer-motion": "^6.3.3",
     "install": "^0.13.0",
     "npm": "^8.10.0",
     "react-router": "^6.3.0",
