--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@reduxjs/toolkit": "1.7.2",
     "@mui/material": "^5.8.0",
     "@mui/styles": "^5.8.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -18,11 +19,14 @@
     "framer-motion": "^6.3.3",
     "install": "^0.13.0",
     "npm": "^8.10.0",
+    "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-observable": "^2.0.0",
     "redux-thunk": "^2.4.1",
+    "rxjs": "^7.5.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
