--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@reduxjs/toolkit": "1.7.2",
     "@mui/material": "^5.8.0",
     "@mui/styles": "^5.8.0",
+    "@reduxjs/toolkit": "1.7.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,9 +16,10 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
-    "framer-motion": "^6.3.3",
+    "framer-motion": "^6.5.1",
     "install": "^0.13.0",
     "npm": "^8.10.0",
+    "react-intersection-observer": "^9.4.1",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
